# bumperr

./: Cargo.toml  README.md
assets/shaders/: custom_stencil.wgsl  post_processing.wgsl  post_processing_2.wgsl
src/: main.rs
src/module/: mod.rs  noise.rs  pong.rs
src/pipeline/: mod.rs
src/rendering/: mod.rs
