[package]
name = "bevycargo"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy-persistent = { version = "0.8.0", features = ["all"] }
# bevy-persistent-windows = "0.8.0"
bevy_egui = "0.39.0"
# bevy_framepace = "0.19.1"
# bevy_simple_subsecond_system = "0.2.0"
# iyes_perf_ui = "0.5.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


[dependencies.bevy]
version = "0.18.0"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_image",
  "bevy_input_focus",
  "bevy_log",
  # "bevy_pbr",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_render",
  # "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_window",
  "bevy_ui",
  "bevy_ui_render",
  # "std",
  # "async_executor",
  # "multi_threaded",
  "sysinfo_plugin",
  "custom_cursor",
  "x11",
  "tonemapping_luts",
  # "async-io",
  "serialize",
  "reflect_documentation",
  "reflect_functions",
  "wayland",
  "spirv_shader_passthrough",
  # "webgpu",
  "default_no_std",
  "experimental_pbr_pcss",
  "meshlet",
  "pbr_anisotropy_texture",
  "pbr_multi_layer_material_textures",
  "pbr_specular_textures",
  "pbr_transmission_textures",
  "asset_processor",
  "bevy_dev_tools",
  # "configurable_error_handler",
  "trace",
  "dynamic_linking",
  "png",
  # "file_watcher", # Asset hot-reloading
  "default_font",
  "webgl2",
  "file_watcher",
  "zstd_rust",
  # "hotpatching"
]

[target.x86_64-unknown-linux-gnu]
bevy = {version = "0.17.2", default-features = false, features = ["file_watcher", "std", "multi_threaded"]}

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# # Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
debug = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
